[gd_scene load_steps=9 format=3 uid="uid://bwj777g0c3bm8"]

[ext_resource type="Script" path="res://Scripts/Shared/Projectile.gd" id="1_m36ob"]
[ext_resource type="Texture2D" uid="uid://qjfq3s20dr0v" path="res://Graphics/Particles/flare.png" id="1_wf6qg"]
[ext_resource type="Material" uid="uid://dmecugxdf67x" path="res://Objects/unlit_add.tres" id="2_akis6"]
[ext_resource type="Texture2D" uid="uid://dfhuhdedf8tkh" path="res://Graphics/Enemies/Gunner Bullet.png" id="2_xubxi"]
[ext_resource type="Script" path="res://Scripts/Enemies/HitboxHazard.gd" id="3_0f4vm"]
[ext_resource type="Material" uid="uid://blxov2qxlbefs" path="res://Objects/unlit_mix.tres" id="5_w3gwv"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8dhco"]
size = Vector2(32, 16)

[sub_resource type="Curve" id="Curve_rcdab"]
_data = [Vector2(0, 1.00497), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 2

[node name="GunnerBullet" type="CharacterBody2D" node_paths=PackedStringArray("raycast")]
collision_layer = 4
script = ExtResource("1_m36ob")
movement_speed = 800
raycast = NodePath("RayCast2D")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="."]
position = Vector2(-8, 0)
shape = SubResource("RectangleShape2D_8dhco")
debug_color = Color(1, 0, 0, 0.419608)

[node name="RayCast2D" type="RayCast2D" parent="."]
position = Vector2(16, 0)
target_position = Vector2(24, 0)

[node name="ParticleBullet" type="CPUParticles2D" parent="."]
material = ExtResource("2_akis6")
amount = 60
lifetime = 0.25
texture = ExtResource("1_wf6qg")
gravity = Vector2(0, 0)
scale_amount_min = 0.25
scale_amount_max = 0.25
scale_amount_curve = SubResource("Curve_rcdab")
color = Color(1, 1, 0, 1)

[node name="SpriteBullet" type="Sprite2D" parent="."]
material = ExtResource("5_w3gwv")
texture = ExtResource("2_xubxi")

[node name="HitboxHazard" type="Area2D" parent="." node_paths=PackedStringArray("hazard_object")]
material = ExtResource("5_w3gwv")
collision_layer = 4
collision_mask = 2
script = ExtResource("3_0f4vm")
hazard_object = NodePath("..")
damage_type = "GunnerBullet"

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitboxHazard"]
position = Vector2(-8, 0)
shape = SubResource("RectangleShape2D_8dhco")
debug_color = Color(1, 0, 0, 0.419608)

[node name="TimerDisappear" type="Timer" parent="."]
wait_time = 0.4
one_shot = true
autostart = true

[node name="TimerCleanup" type="Timer" parent="."]

[connection signal="timeout" from="TimerDisappear" to="." method="_on_timer_disappear_timeout"]
[connection signal="timeout" from="TimerCleanup" to="." method="_on_timer_cleanup_timeout"]
